# xmrbank

./: .gitignore  Cargo.toml  README.md
docker/: docker-compose.yml
main/: Cargo.toml
main/src/: args.rs  main.rs
migrations/: 1_create_user.sql
rpc/: Cargo.toml
rpc/src/: lib.rs
sql/: Cargo.toml
