[workspace]
resolver = "2"
members = ["api", "rpc", "sql"]

[workspace.dependencies]
api = { path = "api" }
sql = { path = "sql" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive", "env"] }
dashmap = "6.0.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.35.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zeroize = { version = "1.8.1", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "rust_decimal",
    "chrono",
] }
color-eyre = "0.6.3"
strum_macros = "0.26.4"
strum = "0.26.3"
axum = { version = "0.7.5", features = ["json", "query", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
hex = "0.4.3"
jsonwebtoken = "9.3.0"
tower-http = { version = "0.5.2", features = ["trace"] }
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4"] }
tarpc = { version = "0.34.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
futures = "0.3.30"
