[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
rpc = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
reqwest = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
tarpc = { workspace = true }
stubborn-io = { workspace = true }
tokio-serde = { workspace = true }
sqlx = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
