[package]
name = "sql"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
color-eyre = { workspace = true }
uuid = { workspace = true }
